Cross, Line, Point, Direction